[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardsim"
version = "1.0.0"
description = "A Bayesian simulator for payment card fraud detection research"
authors = [
    {name = "Jeff Allen", email = "jeff.allen@frb.gov"}
]
dependencies = [
    "pandas>=2.2.2",
    "scipy>=1.13.1"
]

[tool.setuptools]
packages = ["cardsim"]

[tool.setuptools.package-data]
"cardsim" = ["dcpc/*.csv"]
